# fastapi-react

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml  settings.py
api/api/: accounts.py  auth.py  v1_router.py
api/api/v1/: accounts.py  users.py
api/db/: alembic.ini  database.py
api/db/migrations/: env.py
api/db/migrations/versions/: 20230910_120423_73211bdb8496_init_revision.py  20230911_132432_89f7ec6e8441_add_account_table_simple_version.py  2023_09_10_120423_73211bdb8496_init_revision.py  2023_10_12_2112-b478214b45c9_add_columns_to_account.py  2023_10_22_0500-561297f3f8c9_add_user_via_auth0.py  86e9f348179f_init_revision.py  c95b46115e1b_create_table_user.py
api/db/models/: account.py  app_model.py  table_model.py  user.py
api/scripts/: db.py
api/tests/: conftest.py  test_account.py  test_user.py
api/tests/fixtures/: accounts.py  users.py
api/utils/: auth.py  logging.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  Wrapper.jsx  index.js  utils.js
frontend/src/components/buttons/: LoginButton.jsx  LogoutButton.jsx  SignupButton.jsx
frontend/src/components/config/: Auth0ProviderWithNavigate.jsx
frontend/src/components/navigation/: NavBar.jsx  NavBarButtons.jsx  NavBarTabs.jsx
frontend/src/hooks/: useFetchAPI.jsx
frontend/src/pages/: CallbackPage.jsx  MyInfoPage.jsx  PublicPage.jsx
