[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Mark McClatchy <markmcclatchy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
sqlmodel = "^0.0.8"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
