[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Mark McClatchy <markmcclatchy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
pydantic = {version = "^1.8.2", extras = ["email-validator", "dotenv"]}
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_star = true
combine_as_imports = true
lines_after_imports = 2

[tool.poetry.scripts]
db = "scripts.db:main"
