[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Mark McClatchy <markmcclatchy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
sqlmodel = "^0.0.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = {version = "^1.8.2", extras = ["email", "dotenv"]}
httpx = "^0.25.0"
google-auth-oauthlib = "^1.1.0"
authlib = "^1.2.1"
itsdangerous = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
combine_star = true
combine_as_imports = true
lines_after_imports = 2

[tool.poetry.scripts]
db = "scripts.db:main"
